--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
             "app/router/router.php",
             "app/core/controller.php",
             "app/database/connect.php",
-            "app/database/fetch.php",
+            "app/database/queries.php",
             "app/helpers/redirect.php",
             "app/helpers/flash.php",
             "app/helpers/sessions.php",
