optimization of query corrections

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "marcos/registrationSystem",
+    "name": "marcos/php-pro",
     "description": "registration system",
     "authors": [
         {
