--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "registrationSystem",
+  "name": "php-pro",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
